tests/cases/literals/errors/byte-char-unicode.ari
fn main() -> i64 {
  let value = '\u{80}';
  return value as i64;
}
